Initial editor for model association

--- a/de.uni_stuttgart.iste.cowolf.parent/pom.xml
+++ b/de.uni_stuttgart.iste.cowolf.parent/pom.xml
@@ -635,7 +635,11 @@
 		
 		<!-- build SiLift Rulebase Maven plugin -->
 		<!-- <module>../silift-recognition-rules-maven-plugin</module> -->
+
 		
+		<module>
+			../de.uni_stuttgart.iste.cowolf.core.sirius.editor
+		</module>
 	</modules>
 
 </project>
