Initial extraction of the analysis

--- a/de.uni_stuttgart.iste.cowolf.parent/pom.xml
+++ b/de.uni_stuttgart.iste.cowolf.parent/pom.xml
@@ -640,6 +640,7 @@
 		<module>
 			../de.uni_stuttgart.iste.cowolf.core.sirius.editor
 		</module>
+		<module>../de.uni_stuttgart.iste.cowolf.analyze</module>
 	</modules>
 
 </project>
