--- a/de.uni_stuttgart.iste.cowolf.parent/pom.xml
+++ b/de.uni_stuttgart.iste.cowolf.parent/pom.xml
@@ -640,13 +640,30 @@
 		<module>
 			../de.uni_stuttgart.iste.cowolf.core.sirius.editor
 		</module>
+
+
+
+
+
+
+
+		<module>../de.uni_stuttgart.iste.cowolf.model.analyze</module>
+		<module>
+			../de.uni_stuttgart.iste.cowolf.model.analyze.ctmc.prism
+		</module>
+		<module>
+			../de.uni_stuttgart.iste.cowolf.model.analyze.dtmc.prism
+		</module>
+		<module>
+			../de.uni_stuttgart.iste.cowolf.model.analyze.fault_tree.xfta
+		</module>
+		<module>
+			../de.uni_stuttgart.iste.cowolf.model.analyze.lqn.lqnsolver
+		</module>
 		
-		
-		
-		
-		
-		
-		
+		<module>
+			../de.uni_stuttgart.iste.cowolf.ui.model.dtmc.analyze.prism
+		</module>
 	</modules>
 
 </project>
