Fixed some warnings

--- a/de.uni_stuttgart.iste.cowolf.model.lqn/build.properties
+++ b/de.uni_stuttgart.iste.cowolf.model.lqn/build.properties
@@ -8,5 +8,4 @@ bin.includes = .,\
                res/,\
                config/,\
                text/
-source.. = src/,\
-           xtend-gen/
+source.. = src/
